dev: Allow selecting itinerary mode directly
from auto mode
